--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "flowbite": "^1.4.7",
     "jalali-moment": "^3.3.11",
     "moment": "^2.29.3",
     "react": "^18.1.0",
